delete div on search

--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -199,6 +199,7 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
 .column {
   display: table-cell;
   vertical-align:top;
+  margin-left:5px;
 }
 .info {
   padding: 0px 0px 0px 0px; 
