--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -219,3 +219,35 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
     height: 90%;
     -moz-border-radius: 20px
 }
+
+/*////////////GRAPH///////////////////////*/
+
+    .link {
+        fill: none;
+        stroke: #666;
+        stroke-width: 1.5px;
+    }
+
+    #licensing {
+        fill: green;
+    }
+
+    .link.licensing {
+        stroke: green;
+    }
+
+    .link.resolved {
+        stroke-dasharray: 0,2 1;
+    }
+
+    circle {
+        fill: #ccc;
+        stroke: #333;
+        stroke-width: 1.5px;
+    }
+
+    text {
+        font: 10px sans-serif;
+        pointer-events: none;
+        text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+    }
