--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -251,6 +251,6 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
         pointer-events: none;
         text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
     }
-    .hide {
+    .hidden {
         display:none;
     }
