--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -254,3 +254,6 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
     .hidden {
         display:none;
     }
+    .vis {
+        cursor:pointer;
+    }
