--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Popular Movies", "MostPopular", "Home", new { area = "" }, null)</li>
+                    <!-- <li>@Html.ActionLink("Trending Actors", "PopularActors", "Home", new { area = "" }, null)</li>-->
                 </ul>
             </div>
         </div>
@@ -37,7 +39,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Information Visualization</p>
         </footer>
     </div>
     
